--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
-slack_sdk==3.33.1
-slack_bolt==1.20.1
+filelock==3.16.1
+fsspec==2024.10.0
+networkx==3.2.1
+sympy==1.13.3
+mpmath==1.3.0
+typing-extensions==4.12.2
+packaging==24.2
+certifi==2024.12.14
+charset-normalizer==3.4.0
+idna==3.10
+urllib3==2.2.3
+slack-sdk==3.33.1
+numpy==1.26.4
+pillow==10.4.0
 torch==2.4.1
+requests==2.32.3
+slack-bolt==1.20.1
 torchvision==0.19.1
-requests
-openai==1.57.1
