--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 filelock==3.16.1
 fsspec==2024.10.0
+jinja2==3.1.4
+markupsafe==2.1.5
 networkx==3.2.1
 sympy==1.13.3
 mpmath==1.3.0
 typing-extensions==4.12.2
-packaging==24.2
+packaging==23.2
 certifi==2024.12.14
 charset-normalizer==3.4.0
 idna==3.10
@@ -13,6 +15,6 @@ slack-sdk==3.33.1
 numpy==1.26.4
 pillow==10.4.0
 torch==2.4.1
-requests==2.32.3
+requests==2.31.0
 slack-bolt==1.20.1
 torchvision==0.19.1
