--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-slack_sdk==3.33.1
-slack_bolt==1.20.1
-torch==2.4.1
+requests==2.31.0
+slack-bolt==1.20.1
 torchvision==0.19.1
-requests
-openai==1.57.1
+slack-sdk==3.33.1
+torch==2.4.1
